Fix alignment of multisite override overlay

--- a/css/authorizer.scss
+++ b/css/authorizer.scss
@@ -364,7 +364,7 @@
 			background: $color-white;
 			border: 1px solid $color-gray-30;
 			cursor: default;
-			margin: 11px 15em;
+			margin: 0 15em;
 			opacity: 0;
 			padding: 8px;
 			position: absolute;
